--- a/index.html
+++ b/index.html
@@ -1,6 +1,3 @@
-//<h1>Hello world!</h1>
-//<h2>I'm learning GitHub now!</h2>
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -12,5 +9,6 @@
 <body>
     <h1>Добро пожаловать в Codegirl School!</h1>
     <p>Сегодня мы научимся публиковать сайты на GitHub Pages</p>
+    <script src="./script.js"></script>
 </body>
 </html>
